--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --trace-warnings --unhandled-rejections=strict"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/chafey/dicomp10-to-dicomweb-js/issues"
   },
-  "homepage": "https://github.com/chafey/dicomp10-to-dicomweb-js#readme"
+  "homepage": "https://github.com/chafey/dicomp10-to-dicomweb-js#readme",
+  "devDependencies": {
+    "mocha": "^9.1.3"
+  },
+  "dependencies": {
+    "dicom-parser": "^1.8.11"
+  }
 }
