--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mocha": "^9.1.3"
   },
   "dependencies": {
-    "dicom-parser": "^1.8.11"
+    "dicom-parser": "^1.8.11",
+    "hash-object": "^0.1.7",
+    "object-hash": "^2.2.0"
   }
 }
