feat(dicomp10-to-dicomweb):Add an npx command line tool for converting files

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "doc": "docs"
   },
+  "bin": {
+    "mkdicomweb": "bin/mkdicomweb.js"
+  },
   "scripts": {
     "test": "mocha --recursive --trace-warnings --unhandled-rejections=strict"
   },
