feat(dicomp10-to-dicomweb):Added separate tools for instances only
Documented other possible tools to write various types of elements.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "bin": {
-    "mkdicomweb": "bin/mkdicomweb.js"
+    "mkdicomweb": "bin/mkdicomweb.js",
+    "mkdicomwebinstances": "bin/mkdicomwebinstances.js"
   },
   "scripts": {
     "test": "mocha --recursive --trace-warnings --unhandled-rejections=strict"
