fix(dicomp10-to-dicomweb): Fixed a bunch of asynchronous issues
The issues are related to splitting up the processing into different
parts, plus an underlying bug in nodejs where the close operation and
end operaitons for gzip are not correclty asynchronous.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "bin": {
     "mkdicomweb": "bin/mkdicomweb.js",
-    "mkdicomwebinstances": "bin/mkdicomwebinstances.js"
+    "mkdicomwebinstances": "bin/mkdicomwebinstances.js",
+    "mkdicomwebstudy": "bin/mkdicomwebsutdy.js",
+    "staticwadojs": "bin/mkdicomweb.js"
   },
   "scripts": {
     "test": "mocha --recursive --trace-warnings --unhandled-rejections=strict"
