fix(dicomp10-to-dicomweb):Updated the documentation and command line
The documentation on the command line tools was out of date and needed
to be updated.  Also, the install of hte command line tools itself was
failing due to some inconsistencies.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dicomp10-to-dicomweb",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Library to convert DICOMP10 to DICOMweb format",
   "main": "src/index.js",
   "directories": {
@@ -8,6 +8,8 @@
   },
   "bin": {
     "mkdicomweb": "bin/mkdicomweb.js",
+    "mkdicomwebdeduplicated": "bin/mkdicomwebdeduplicated.js",
+    "mkdicomwebdeduplicatedgroup": "bin/mkdicomwebdeduplicatedgroup.js",
     "mkdicomwebinstances": "bin/mkdicomwebinstances.js",
     "mkdicomwebstudy": "bin/mkdicomwebstudy.js",
     "staticwadojs": "bin/mkdicomweb.js"
