--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mocha": "^9.1.3"
   },
   "dependencies": {
+    "commander": "^8.3.0",
     "dicom-parser": "^1.8.11",
     "hash-object": "^0.1.7",
     "node-object-hash": "^2.3.10",
