--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "staticwadojs": "bin/mkdicomweb.js"
   },
   "scripts": {
+    "lint": "eslint src bin",
+    "lint:fix": "eslint src bin --fix",
     "test": "mocha --recursive --trace-warnings --unhandled-rejections=strict"
   },
   "repository": {
@@ -35,6 +37,9 @@
   },
   "homepage": "https://github.com/chafey/dicomp10-to-dicomweb-js#readme",
   "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.1.3"
   },
   "dependencies": {
