--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mkdicomwebdeduplicatedgroup": "bin/mkdicomwebdeduplicatedgroup.js",
     "mkdicomwebinstances": "bin/mkdicomwebinstances.js",
     "mkdicomwebstudy": "bin/mkdicomwebstudy.js",
+    "dicomwebscp": "bin/dicomwebscp.js",
     "staticwadojs": "bin/mkdicomweb.js"
   },
   "scripts": {
@@ -38,7 +39,8 @@
     "mocha": "^9.1.3"
   },
   "dependencies": {
-    "dicom-parser": "^1.8.11",
+    "dcmjs-dimse": "^0.0.14",
+    "dicom-parser": "^1.8.13",
     "hash-object": "^0.1.7",
     "node-object-hash": "^2.3.10",
     "object-hash": "^2.2.0"
