feat(static-wado-js):All converting to various formats of images
* Data/metadata re encode scenarios

* Code review. Removing args is its already replaced by commander

* feature Code review

* Code review. Add foundation for dicomwebscp command. Other minor fixes

* Code review add correct dicom-codec version

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "mocha": "^9.1.3"
   },
   "dependencies": {
+    "@cornerstonejs/dicom-codec": "^0.1.1",
+    "commander": "^8.3.0",
     "dcmjs-dimse": "^0.0.14",
     "dicom-parser": "^1.8.13",
     "hash-object": "^0.1.7",
