--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "must": "^0.13.4"
   },
   "dependencies": {
     "@cornerstonejs/dicom-codec": "^0.1.1",
