--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dicomp10-to-dicomweb",
+  "name": "@ohif/static-wado-js",
   "version": "0.4.0",
-  "description": "Library to convert DICOMP10 to DICOMweb format",
+  "description": "Library to convert DICOMP10 to DICOMweb format. Original upstream: https://github.com/chafey/dicomp10-to-dicomweb-js",
   "main": "src/index.js",
   "directories": {
     "doc": "docs"
@@ -16,13 +16,16 @@
     "staticwadojs": "bin/mkdicomweb.js"
   },
   "scripts": {
+    "build": "echo 'Nothing to build' && exit 0",
+    "build:ci": "yarn run build",
     "lint": "eslint src bin",
     "lint:fix": "eslint src bin --fix",
-    "test": "git submodule update --init && mocha --recursive --trace-warnings --unhandled-rejections=strict"
+    "test": "git submodule update --init && mocha --recursive --trace-warnings --unhandled-rejections=strict",
+    "test:ci": "yarn run test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chafey/dicomp10-to-dicomweb-js.git"
+    "url": "git@github.com:OHIF/static-wado-js.git"
   },
   "keywords": [
     "DICOM",
@@ -32,19 +35,23 @@
     "Chris Hafey <chafey@gmail.com>",
     "Bill Wallace <bill.wallace@radicalimaging.com>"
   ],
+  "contributors": [
+    "Rodolfo Costa <rodolfo.costa@radicalimaging.com>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chafey/dicomp10-to-dicomweb-js/issues"
+    "url": "https://github.com/OHIF/static-wado-js/issues"
   },
-  "homepage": "https://github.com/chafey/dicomp10-to-dicomweb-js#readme",
+  "homepage": "https://github.com/OHIF/static-wado-js#readme",
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "semantic-release": "^19.0.2"
   },
   "dependencies": {
-    "@cornerstonejs/dicom-codec": "^0.1.1",
+    "@cornerstonejs/dicom-codec": "^0.1.2",
     "commander": "^8.3.0",
     "dcmjs-dimse": "^0.0.14",
     "dicom-parser": "^1.8.13",
