--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "mocha": "^9.1.3",
-    "semantic-release": "^19.0.2"
+    "semantic-release": "^19.0.2",
+    "must": "^0.13.4"
   },
   "dependencies": {
     "@cornerstonejs/dicom-codec": "^0.1.2",
